--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Manjari&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -40,5 +42,35 @@ body {
 
     }
   }
-
 }
+
+/// Error
+
+.error{
+  color: white;
+  font-family: sans-serif;
+  font-size: 40px;
+  margin-top: 8em;
+  text-align: center;
+}
+
+/// City info
+
+.weather-display{
+  width: 30%;
+  margin: 0 auto;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 40px;
+  font-family: 'Manjari', sans-serif;
+  h1{
+    font-weight: 400;
+    margin-bottom: 50px;
+  }
+  i{
+    font-size: 150px;
+  }
+}
+
