--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Manjari&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400&display=swap');
 
 * {
   margin: 0;
@@ -6,25 +6,16 @@
   box-sizing: border-box;
 }
 
-//body {
-//  height: 100%;
-//  background-image: url('img/seaside-1149687_1920.jpg');
-//  background-position: center center;
-//  background-repeat: no-repeat;
-//  background-attachment: fixed;
-//  background-size: cover;
-//  //filter: blur(8px);
-//}
 
 .bg-image {
   height: 100%;
   width: 100%;
-  background-image: url('img/seaside-1149687_1920.jpg');
+  background-image: url('img/face-3324569_1920.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  filter: blur(5px);
+  //filter: blur(2px);
   position: fixed;
   top: 0;
   left: 0;
@@ -34,14 +25,15 @@
 #root {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 100%;
   margin: 0 auto;
+  align-items: center;
 }
 
 .search-form {
   display: flex;
   justify-content: center;
-  width: 100%;
+  width: 50%;
   min-width: 300px;
   margin: 5em 0;
 
@@ -77,48 +69,56 @@
   color: white;
   font-family: sans-serif;
   font-size: 40px;
-  margin-top: 8em;
+  margin-top: 25vh;
   text-align: center;
 }
 
 /// City info
 
 .weather-display {
-  margin-top: 10vh;
+  margin-top: 5vh;
+  width: 30%;
   color: white;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
   font-size: 34px;
-  font-family: 'Manjari', sans-serif;
-  text-shadow: 5px 1px 5px black;
+  font-family: 'Lato', sans-serif;
+  text-shadow: 3px 1px 3px black;
 
   .weather-city {
-    font-weight: 400;
-    font-size: 100px;
+    font-weight: 300;
+    font-size: 80px;
+    text-align: center;
+    margin-bottom: 10vh;
   }
 
   .weather-info {
-    //margin-left: 100px;
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
-    justify-content: space-between;
-
-    .weather-temp {
-      margin-top: 40px;
-      font-weight: 400;
-
-    }
 
     i {
       font-size: 150px;
-      font-weight: 400;
+      font-weight: 300;
     }
 
-    p {
-      font-size: 24px;
+    .right-info {
+
+      display: flex;
+      flex-direction: column;
+
+      .weather-temp {
+        font-weight: 300;
+        font-size: 100px;
+
+      }
+
+      p {
+        font-size: 24px;
+        font-weight: 300;
+      }
+
     }
+
+
   }
 
 }
