--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,9 @@
   box-sizing: border-box;
 }
 
+body{
+  width: 100%;
+}
 
 .bg-image {
   height: 100%;
@@ -34,8 +37,9 @@
   display: flex;
   justify-content: center;
   width: 50%;
-  min-width: 300px;
-  margin: 5em 0;
+  min-width: 350px;
+  margin: 10vh 0;
+
 
   input {
     width: 100%;
@@ -46,6 +50,7 @@
     padding-left: 20px;
     color: #333;
     outline: none;
+    margin-left: 40px;
   }
 
   .search-btn {
@@ -54,6 +59,7 @@
     border: none;
     background-color: inherit;
     outline: none;
+    cursor: pointer;
 
     .search-icon {
       font-size: 40px;
@@ -83,11 +89,28 @@
   font-family: 'Lato', sans-serif;
   text-shadow: 3px 1px 3px black;
 
+  @media (max-width: 1600px) {
+    width: 40%;
+  }
+  @media (max-width: 1100px) {
+    width: 50%;
+  }
+  @media (max-width:840px) {
+    width: 60%;
+  }
+  @media (max-width:420px) {
+    width: 100%;
+  }
+
   .weather-city {
     font-weight: 300;
     font-size: 80px;
     text-align: center;
     margin-bottom: 10vh;
+    @media (max-width:420px) {
+      font-size: 60px;
+    }
+
   }
 
   .weather-info {
@@ -98,12 +121,28 @@
     i {
       font-size: 150px;
       font-weight: 300;
+
+      @media (max-width: 600px) {
+        margin-right: 30px;
+      }
+      @media (max-width:420px) {
+        display: none;
+      }
+
     }
 
     .right-info {
 
       display: flex;
       flex-direction: column;
+
+      @media (max-width: 600px) {
+      margin-left:30px;
+    }
+
+      @media (max-width:420px) {
+        margin: 0;
+      }
 
       .weather-temp {
         font-weight: 300;
@@ -114,6 +153,7 @@
       p {
         font-size: 24px;
         font-weight: 300;
+        text-align: center;
       }
 
     }
